@@ -26,7 +26,7 @@ import org.apache.commons.configuration2.ex.ConfigurationException;
 import org.apache.commons.configuration2.PropertiesConfiguration;
 import org.apache.commons.configuration2.builder.FileBasedConfigurationBuilder;
 import org.apache.commons.configuration2.builder.fluent.Parameters;
-import org.apache.commons.lang.exception.ExceptionUtils;
+import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.onap.aai.datasnapshot.DataSnapshot;
 import org.onap.aai.db.props.AAIProperties;
 import org.onap.aai.dbmap.AAIGraph;
@@ -53,10 +53,8 @@ import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Properties;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -133,7 +131,7 @@ public class MigrationControllerInternal {
 					dataSnapshot.executeCommand(dataSnapShotArgs, true, false, null, "MULTITHREAD_RELOAD", snapshotFile);
 				}
 			} catch (ConfigurationException e) {
-				logAndPrint("ERROR: Could not load janusgraph configuration.\n" + ExceptionUtils.getFullStackTrace(e));
+				logAndPrint("ERROR: Could not load janusgraph configuration.\n" + ExceptionUtils.getStackTrace(e));
 				return;
 			}
 		}
@@ -208,7 +206,7 @@ public class MigrationControllerInternal {
 							SchemaVersions.class
 						).newInstance(engine, loaderFactory, edgeIngestor, edgeSerializer,schemaVersions);
 				} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
-					logAndPrint("EXCEPTION caught initalizing migration class " + migratorClass.getSimpleName() + ".\n" + ExceptionUtils.getFullStackTrace(e));
+					logAndPrint("EXCEPTION caught initalizing migration class " + migratorClass.getSimpleName() + ".\n" + ExceptionUtils.getStackTrace(e));
 					engine.rollback();
 					continue;
 				}
@@ -361,7 +359,7 @@ public class MigrationControllerInternal {
 		logAndPrint("Saving snapshot of graph " + phase + " migration to " + fileName);
 		try {
 
-			Path pathToFile = Paths.get(fileName);
+			Path pathToFile = Path.of(fileName);
 			if (!pathToFile.toFile().exists()) {
 				Files.createDirectories(pathToFile.getParent());
 			}
@@ -369,7 +367,7 @@ public class MigrationControllerInternal {
 			DataSnapshot dataSnapshot = new DataSnapshot();
 			dataSnapshot.executeCommand(dataSnapshotArgs, true, false, null, "THREADED_SNAPSHOT", null);
 		} catch (IOException e) {
-			logAndPrint("ERROR: Could not write in memory graph to " + phase + "Migration file. \n" + ExceptionUtils.getFullStackTrace(e));
+			logAndPrint("ERROR: Could not write in memory graph to " + phase + "Migration file. \n" + ExceptionUtils.getStackTrace(e));
 			engine.rollback();
 		}
 
