@@ -27,11 +27,11 @@ import org.onap.aai.util.AAIConstants;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 
-import javax.annotation.PostConstruct;
+import jakarta.annotation.PostConstruct;
 import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
@@ -52,7 +52,7 @@ public class AuthorizationService {
 
         String basicAuthFile = getBasicAuthFilePath();
 
-        try(Stream<String> stream = Files.lines(Paths.get(basicAuthFile))){
+        try(Stream<String> stream = Files.lines(Path.of(basicAuthFile))){
             stream.filter(line -> !line.startsWith("#")).forEach(str -> {
                 byte [] bytes = null;
 
